tests/error/protocol_errors/unitary_return.py
from collections.abc import Callable

from guppylang import guppy
from guppylang.std.lang import Unitary
from guppylang.std.quantum import h, qubit

@guppy
def main() -> Unitary[[qubit], None]:
    return h

main.compile_function()
