tests/error/protocol_errors/unitary_return.err
Error: Protocols are not allowed as return types (at $FILE:8:14)
  | 
6 | 
7 | @guppy
8 | def main() -> Unitary[[qubit], None]:
  |               ^^^^^^^^^^^^^^^^^^^^^^ `Unitary` is a protocol, which is not allowed as a return
  |                                      type

Guppy compilation failed due to 1 previous error
